# cybersecurity-ai

./: docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
docker/: Dockerfile.app  Dockerfile.vuln1  Dockerfile.vuln2  index.html  package.json  server.js
langchain_impl/: app.py  graph.py  prompts.py
langchain_impl/agents/: docker_security_agent.py  vulnscanner_agent.py
langchain_impl/config/: prompts.yaml
langchain_impl/tools/: docker.py  vulnscanner.py
n8n_worflows/: cert-in-auto-vuln-scanner_v3.json  cert-in-auto-vuln-scanner_v6.json  cert-in-auto-vuln-scanner_v7.json  cert-in-auto-vuln-scanner_v8.json  cybersec_agentic_workflow_v1.json  docker-compose.yml  working_vuln_scan.json
n8n_worflows/docker/: n8n_app.Dockerfile  vuln_tools.Dockerfile
n8n_worflows/scripts/: connect_msf_postgres.sh  database_conf.yml
smolagent_framework/src/: app_smolagent.py  tools.py
smolagents_impl/: app_3.py
smolagents_impl/prompts/: metasploit_prompt.txt  metasploit_prompt.yaml  prompt.yaml
smolagents_impl/resource/: scan.rc
smolagents_impl/tools/: msf_tool.py  nmap_tool.py  vulnscan_tools.py
src/: app.py  graph.py  states.py
src/tools/: docker_cs_test.py
